fixing alignment

--- a/01UOA_INST-UOA_NDE/assets/css/custom.css
+++ b/01UOA_INST-UOA_NDE/assets/css/custom.css
@@ -8,7 +8,7 @@ nde-logo {
 [data-qa="link-to-newspaper-search"] {
   display: none;
 }
-.ual-top-banner {background-color:#275D38; height:70px; padding:15px 0 15px 30px;}
+.ual-top-banner {background-color:#275D38; height:70px; padding:15px 0 15px 30px; width: 100%;}
 .ual-top-banner img {float:left; height:40px;}
 .ual-inner {margin:auto; max-width:1240px;}
 .ual-library-tag {float:left; color:#F2CD00; font-size:1.8rem; text-decoration: none; margin:7px 0 0 35px; font-weight: 200;}
